# plants_demo_streamlit

./: README.md  app.py  appv2.py  appv3.py  appv4.py  labels.py  pyproject.toml  requirements.txt
Colab/Color/: Plants_color_prodv10.ipynb  Plants_color_prodv2.ipynb  model_plants_final-8p.ipynb
Colab/Grayscale/: Plants_grayscale_prodv2.ipynb
Colab/Segmented/: Plants_segmented_prodv1.ipynb  Plants_segmented_prodv10.ipynb  plants_segmented_prod.ipynb
Models/: Leaf_Disease_Treatment_Plan.csv  Leaf_Disease_Treatment_Plan.xlsx  Models.txt  labels.txt
